# Farbrausch-V2-VST3-x64

./: .gitignore  CMakeLists.txt  README.md  dsio_cpp.cpp  e2p_stub.cpp  ronan.cpp  v2mplayer.cpp  v2mplayer.h
v2m_player_x64/: main.cpp
vst3/: helper_backend.cpp  helper_backend.h  helper_main.cpp  v2vst3_api.h  v2vst3_plugin.cpp  version.h
vsti/: common.h  v2api.h  v2appearance.h  v2view.h
x64_standalone/: main.cpp  midi_backend.cpp  midi_backend.h  record_smoke.cpp
